# grant-ai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INTEGRATION_SUMMARY.md  AI_WRITING_IMPLEMENTATION_COMPLETE.md  ALL_ISSUES_RESOLVED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GUI_CRASH_FIXES.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  ISSUE_RESOLVED.md  Makefile  PROJECT_GOALS.md  PROJECT_STATUS.md  README.md  SCRAPER_ENHANCEMENT_SUMMARY.md  SECURITY.md  check_deps.py  coda_profile.json  demo_ai_features.py  demo_foundation_database.py  direct_test.py  docker-compose.yml  importlog.txt  nrg_profile.json  pyproject.toml  quick_test_ai.py  requirements-ai.txt  requirements-reporting.txt  run.sh  run_gui_tests.py  simple_test.py  test_grant_details.py  test_improvements.py  test_preset_organizations.py  validate_integration.py
.copilot/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  (+1 more)
config/: config.yaml  next_phase_config.yaml  phase8_demo_settings.yaml
data/: README.md  applications_coda.json  applications_nrg.json  coda_real_profile.json  grants.db  last_update.json  nrg_real_profile.json  questionnaire_results_coda.json  questionnaire_results_nrg.json  report_coda.json  report_nrg.json
docs/: ADVANCED_DISCOVERY_FEATURES.md  ADVANCED_GRANT_DISCOVERY_COMPLETE.md  AI_GRANT_WRITING_COMPLETE.md  DIRECTORY_STRUCTURE.md  ENHANCEMENTS_SUMMARY.md  GRANT_PLATFORM_INTEGRATION.md  HOW_TO_ACCESS_MORE_GRANTS.md  NEXT_STEPS.md  NEXT_STEPS_ROADMAP.md  PHASE6_CONFIG_GUIDE.md  PHASE6_NEXT_FEATURES.md  PHASE6_PROGRESS.md  PHASE8_INTEGRATION_GUIDE.md  PHASE8_PROJECT_PLAN.md  PHASE8_TEST_PLAN.md  PLATFORM_INTEGRATION_STRATEGY.md  PLATFORM_INTEGRATION_SUMMARY.md  PRESET_ORGANIZATIONS_IMPROVEMENTS.md  PROJECT_COMPLETE_STATUS.md  WORKFLOW.md  accessibility_checklist.md  ai_grant_writing_integration.md  analytics_reporting_checklist.md  api_integration_checklist.md  application_tracking_summary.md  current_status.md  documentation_tutorial_checklist.md  enhanced_features.md  faq.md  feedback_community_checklist.md  grant_database_update.md  mobile_responsive_checklist.md  next_phase_roadmap.md  past_grants_implementation_summary.md  past_grants_tab_guide.md  phase5_summary.md  project_plan.md  project_progress.md  project_status.md  security_compliance_checklist.md  (+4 more)
reports/: grant_report_CODA_20250625_232125.xlsx  grant_report_CODA_20250625_232434.xlsx  grant_report_all_orgs_20250625_232123.xlsx  grant_report_all_orgs_20250625_232124.html  grant_report_all_orgs_20250625_232433.html  grant_report_all_orgs_20250625_232433.xlsx  grant_report_all_orgs_20250626_100522.xlsx  grant_report_all_orgs_20250626_100523.html  grant_report_org_1_20250626_100525.html  grant_report_org_1_20250626_100525.xlsx  grant_report_stem_robotics_academy_20250626_100524.xlsx  grant_report_stem_robotics_academy_20250626_100525.html  performance_analysis.json
scripts/: README.md  analyze_performance.py  build_exe.sh  capture_screenshots.sh  create_sample_data.py  demo_application_tracking.py  demo_reporting_system.py  dev.sh  generate_sample_data.py  init_db.py  install_gui.sh  launch_gui.py  migrate_grants.py  phase5_testing.py  run.sh  setup.py  test_reporting.py  wv_offline.py
tests/: README.md  conftest.py  test_application_tracking.py  test_grant_researcher.py  test_organization.py
(+224 files in other folders)
